Some spacing fixes. profile card now shows roles separated by commas.

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -119,3 +119,13 @@ main {
 		margin-top: 2px;
 	}
 }
+
+.user-details {
+	.base-content {
+		margin: 10px;
+	}
+
+	.first-level-item {
+		margin: 20px 0px;
+	}
+}
